use-case3/deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mockbin
    version: v1
  name: mockbin-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mockbin
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mockbin
        sidecar.istio.io/inject: 'true'
        version: v1
    spec:
      containers:
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: WEB_CONCURRENCY
              value: '5'
            - name: TZ
              value: UTC
            - name: TOPOLOGY_REGION
              value: datacenter1
            - name: TOPOLOGY_ZONE
              value: zone1
            - name: TOPOLOGY_SUBZONE
              value: zone1
          image: localhost/mockbin:v1.0.0
          imagePullPolicy: IfNotPresent
          name: mockbin
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        topology.kubernetes.io/zone: zone1
        topology.istio.io/subzone: zone1
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mockbin
    version: v2
  name: mockbin-v2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mockbin
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mockbin
        sidecar.istio.io/inject: 'true'
        version: v2
    spec:
      containers:
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: WEB_CONCURRENCY
              value: '5'
            - name: TZ
              value: UTC
            - name: TOPOLOGY_REGION
              value: datacenter1
            - name: TOPOLOGY_ZONE
              value: zone2
            - name: TOPOLOGY_SUBZONE
              value: zone2
          image: localhost/mockbin:v1.0.0
          imagePullPolicy: IfNotPresent
          name: mockbin
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        topology.kubernetes.io/zone: zone2
        topology.istio.io/subzone: zone2
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 1
