use-case3/deploy/virtualservice.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mockbin
spec:
  gateways:
    - gateway
  hosts:
    - mockbin.apps.example.com
  http:
    - route:
        - destination:
            host: mockbin
            port:
              number: 8080
          weight: 100
